--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@angular-eslint/test-utils": "^19.1.0",
     "@typescript-eslint/utils": "^8.24.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/parser": "^8.24.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.3"
   },
   "private": true
