feat: effect-dependency-check

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@angular-eslint/template-parser": "^19.1.0",
     "@angular-eslint/test-utils": "^19.1.0",
     "@typescript-eslint/utils": "^8.24.1"
   },
