--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "dist",
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "src/*"
@@ -14,6 +15,6 @@
     }
   },
   "include": [
-    "src"
+    "src/**/*.ts"
   ]
 }
