--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mzkmnk-lab/eslint-custom-rules",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "description": "eslint custom rules",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
